[tool.poetry]
name = "darca-yaml"
version = "0.2.0"
description = "YAML utilities for reuse along projects."
authors = ["Roel Kist <roel.kist@gmail.com>"]
license = "LICENSE"
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.12"
darca-log-facility = "^0.1.0"
darca-exception = "^0.1.0"
darca-file-utils = "^0.1.0"
cerberus = "^1.3.7"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.1"
bandit = "^1.8.3"
mypy = "^1.15.0"
mypy-extensions = "^1.0.0"
pre-commit = "^4.1.0"
coverage-badge = "^1.1.2"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-applehelp = "^2.0.0"
sphinxcontrib-devhelp = "^2.0.0"
sphinxcontrib-htmlhelp = "^2.1.0"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^2.0.0"
sphinxcontrib-serializinghtml = "^2.0.0"
sphinxcontrib-plantuml = "^0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"